[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/VisionMode.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/night-vision-on.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/night-vision-off.ogg" type="AudioStream" id=3]

[node name="VisionMode" type="CanvasModulate" groups=[
"ui",
]]
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
script = ExtResource( 1 )

[node name="ToDarkSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="ToLightSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
